[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["LENOVO <javiersanben1002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pymysql = "^1.1.0"
install = "^1.3.5"
cryptography = "^41.0.7"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
